--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,31 @@
 {
-  "manifest_version": 2,
-  "name": "monk",
-  "version": "0.1",
+    "manifest_version": 2,
+    "name": "monk",
+    "version": "0.1",
 
-  "description": "stay focus",
+    "description": "stay focus",
 
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["monk.js"]
+    "icons" : {
+	"512": "icon.png"
+    },
+
+    "background": {
+	"scripts": ["background.js"]
+    },
+    "browser_action": {
+	"default_title": "stay focus"
+    },
+
+    
+    "content_scripts": [
+	{
+	    "matches": ["<all_urls>"],
+	    "js": ["monk.js"]
+	}
+    ],
+    "permissions" : ["storage"],
+    "options_ui" : {
+	"browser_style": true,
+	"page" : "options.html"
     }
-  ]
 }
