--- a/manifest.json
+++ b/manifest.json
@@ -9,9 +9,6 @@
 	"512": "icon.png"
     },
 
-    "background": {
-	"scripts": ["background.js"]
-    },
     "browser_action": {
 	"default_title": "stay focus"
     },
@@ -25,7 +22,13 @@
     ],
     "permissions" : ["storage"],
     "options_ui" : {
-	"browser_style": true,
-	"page" : "options.html"
-    }
+	    "browser_style": true,
+	    "page" : "options.html"
+    },
+    "browser_specific_settings": {
+      "gecko": {
+          "id": "monk@mystheim.space",
+          "strict_min_version": "57.0a1"
+      }
+  }
 }
